# sinks-bruh

./: .gitattributes  .gitignore  HALLUCINATION_SINK_HYPOTHESES_2026-01-25.md  README.md  hallucinations_hypotheses.md  pyproject.toml  requirements-hypotheses.txt  run_heavy_models.sh  run_more_models.sh  run_sink_campaign_4gpus.sh  run_sota_models.sh
configs/: mmlu_accuracy.json  sink_campaign.json  sink_campaign_nochat.json
hypotheses/: .gitignore  README.md  WORKFLOW.md  __init__.py  analyze_all.py  main.ipynb
hypotheses/H0_sanity/: RUN_IN_NOTEBOOK.md  config.json  final.md  hypothesis.md  run_notes.md
hypotheses/H1_distribution_shift/: RUN_IN_NOTEBOOK.md  config.json  final.md  hypothesis.md  run_notes.md
hypotheses/H2_predictive/: RUN_IN_NOTEBOOK.md  config.json  final.md  hypothesis.md  run_notes.md
hypotheses/H3_added_value_entropy/: RUN_IN_NOTEBOOK.md  config.json  final.md  hypothesis.md  run_notes.md
hypotheses/H4_localization/: RUN_IN_NOTEBOOK.md  config.json  final.md  hypothesis.md  run_notes.md
hypotheses/H5_chat_sensitivity/: RUN_IN_NOTEBOOK.md  config.json  final.md  hypothesis.md  run_notes.md
hypotheses/H6_query_set_sensitivity/: RUN_IN_NOTEBOOK.md  config.json  final.md  hypothesis.md  run_notes.md
hypotheses/H7_sink_entropy/: RUN_IN_NOTEBOOK.md  (+4 more)
notebooks/: README_COLAB.md  quickstart.ipynb
scripts/: analyze_mmlu_results.py  build_campaign_jobs.py  compare_accuracy_sink.py  main.py  measure_accuracy.py  measure_sink_text.py  plot_accuracy_vs_sink_runs.py  plot_h1.py  plot_h1_heatmap.py  plot_layer_profiles.py  plot_sink_entropy.py
(+283 files in other folders)
